# gitsync

./: Cargo.toml  README.md  config.json  gitsync.slnx  index.html
.github/workflows/: ci.yml  coverage.yml  release.yml
coverage/home/runner/work/gitsync/gitsync/src/: main.rs.html
coverage/home/runner/work/gitsync/gitsync/src/configuration/: config_reader.rs.html  config_settings.rs.html
coverage/home/runner/work/gitsync/gitsync/src/services/: git_sync_service.rs.html  known_hosts_service.rs.html  process_runner.rs.html
docs/: README.md  STAR.md
rustport/: Cargo.toml
rustport/src/: main.rs
rustport/src/configuration/: config_reader.rs  mod.rs
rustport/src/services/: git_sync_service.rs  known_hosts_service.rs  mod.rs  process_runner.rs
src/: ConfigReader.cs  ConfigSettings.cs  GitSyncService.cs  KnownHostsService.cs  ProcessRunner.cs  Program.cs  gitsync.csproj  lib.rs  main.rs
src/Configuration/: ConfigReader.cs  ConfigSettings.cs
src/Services/: GitSyncService.cs  KnownHostsService.cs  ProcessRunner.cs
src/configuration/: config_reader.rs  config_settings.rs  mod.rs
src/services/: git_sync_service.rs  known_hosts_service.rs  mod.rs  process_runner.rs
tests/: config_reader.rs  git_sync_service.rs  known_hosts_service.rs  main.rs  process_runner.rs
